Altera nomes de classes css

--- a/componentes/ModalLogged/ModalLogged.module.css
+++ b/componentes/ModalLogged/ModalLogged.module.css
@@ -67,10 +67,10 @@
     cursor: pointer;
 }
 
-.ButtonLogOut{
+.MargemSemButtonAuxiliar{
     margin-top: 200px;
 }
 
-.ButtonAuxiliar {
+.MargemComButtonAuxiliar {
     margin-top: 100px;
 }
