--- a/componentes/ModalInicio/ModalInicio.module.css
+++ b/componentes/ModalInicio/ModalInicio.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 27px;
-    padding: 20px 40px;
+    padding: 25px 70px;
 }
 
 .ModalInicioTitulo{
@@ -11,8 +11,8 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 130%;
-    letter-spacing: -0.02em;
     color: #1F1F1F;
+    width: 70%;
 }
 
 .ModalInicioChamada{
