--- a/componentes/ModalAlert/ModalAlertV3.module.css
+++ b/componentes/ModalAlert/ModalAlertV3.module.css
@@ -111,8 +111,8 @@
     color: #145C56;
 }
 .close{
-    width: 85%;
-    height: 100%;
+    width: 72%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
