--- a/componentes/ModalAlert/ModalAlertV3.module.css
+++ b/componentes/ModalAlert/ModalAlertV3.module.css
@@ -50,7 +50,7 @@
     font-weight: 400;
     font-size: 26px;
     line-height: 120%;
-    color: #145C56;
+    color: #606E78;
 }
 .CardProfissional{
     background-color: #2EB380;
