--- a/componentes/RecuperarSenha/RecuperarSenha.module.css
+++ b/componentes/RecuperarSenha/RecuperarSenha.module.css
@@ -6,7 +6,7 @@
     align-items: flex-start;
     justify-content: center;
     width: 100%;
-    padding: 15px 30px;
+    padding: 25px 70px;
     gap: 24px;
 }
 
@@ -141,7 +141,22 @@
 .RecuperarSenhaBotaoVoltar:hover{
     cursor: pointer;
 }
-
+.Timer{
+    color: #2EB280;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+.SMS{
+    border-bottom: solid 1px #2EB280;
+    margin-left: 5px;
+}
+.SMS:hover{
+    cursor: pointer;
+}
 .RecuperarSenhaBotaoProximo{
     font-family: 'Inter';
     font-style: normal;
@@ -218,7 +233,7 @@
 }
 
 .showPassword{
-    height: 18px;
+    height: 30px;
     width: auto;
     filter: invert(90%) sepia(15%) saturate(253%) hue-rotate(161deg) brightness(79%) contrast(84%);
 }
