--- a/componentes/RecuperarSenha/RecuperarSenha.module.css
+++ b/componentes/RecuperarSenha/RecuperarSenha.module.css
@@ -45,6 +45,10 @@
     display: flex;
     flex-direction: column;
 }
+.InputColorIPAlerta{
+    outline: none !important;
+    border: #EABF2E solid 1px;
+}
 
 .InputColorIP:focus, .InputWhite:focus , .RecuperarSenhaInput:focus{
     outline: none !important;
