--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -8,7 +8,6 @@
   height: 85px;
   padding: 2px;
   margin-bottom: 54px;
-  overflow-x: hidden;
 }
 
 .PanelSelectorMain p{
@@ -29,7 +28,8 @@
   width: 100%;
   height: 63px;
   padding: 0 9%;
-
+  flex-wrap: wrap; 
+  
   font-family: "Inter";
   font-size: small;
   overflow-x: scroll;
@@ -43,6 +43,7 @@
   width: 100%;
   height: 63px;
   padding: 0;
+  flex-wrap: wrap; 
 
   font-family: "Inter";
   font-size: small;
@@ -94,13 +95,14 @@
   padding: 2px;
 
   font-family: "Inter";
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   color: #141919;
   white-space: nowrap;
   
   transition: 0.3s;
   cursor: pointer;
+  houver: #2EB280;
 }
 
 .PanelSelectorButton {
@@ -113,7 +115,7 @@
   background: none;
 
   font-family: "Inter";
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   color: #ABABAB;
   white-space: nowrap;
@@ -134,13 +136,14 @@
   padding: 2px;
 
   font-family: "Inter";
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   color: #141919;
   white-space: nowrap;
   
   transition: 0.3s;
   cursor: pointer;
+  houver: #2EB280;
 }
 
 .PanelSelectorTitleButton {
@@ -153,7 +156,7 @@
   background: none;
 
   font-family: "Inter";
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   color: #ABABAB;
   white-space: nowrap;
