Correção do hover

--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -106,8 +106,7 @@
 }
 
 .PanelSelectorButtonSelected:hover{
-  background-color: #2EB280;
-  color: #141919;
+  color: #2EB280;
 }
 
 .PanelSelectorButton {
@@ -130,8 +129,7 @@
 }
 
 .PanelSelectorButton:hover{
-  background-color: #2EB280;
-  color: #141919;
+  color: #2EB280;
 }
 
 .PanelSelectorTitleButtonSelected {
@@ -155,8 +153,7 @@
 }
 
 .PanelSelectorTitleButtonSelected:hover {
-  background-color: #2EB280;
-  color: #141919;
+  color: #2EB280;
 }
 
 .PanelSelectorTitleButton {
@@ -179,8 +176,7 @@
 }
 
 .PanelSelectorTitleButton:hover{
-  background-color: #2EB280;
-  color: #141919;
+  color: #2EB280;
 }
 
 .PanelSelectorComponents {
