--- a/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
+++ b/componentes/PainelBuscaAtiva/PainelBuscaAtiva.module.css
@@ -48,6 +48,14 @@
     margin-left: 85px;
     margin-right: 7%;
 }
+.CardInfoTooltip {
+    font-family: 'Inter';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    background-color: #FFF0E1;
+}
 .SearchBar{
     background: #EFF5F9;
     border-radius: 100px;
