alterar cor hover impressao

--- a/componentes/PainelBuscaAtiva/tippy_theme.css
+++ b/componentes/PainelBuscaAtiva/tippy_theme.css
@@ -4,6 +4,6 @@
     font-style: normal;
     font-weight: 400;
     text-align: center;
-    background-color: #FFF0E1;
+    background-color: #FFF7DE;
     color: #1F1F1F;
 }
