Remove padding quando linhas são quebradas

--- a/componentes/PanelSelector/PanelSelector.module.css
+++ b/componentes/PanelSelector/PanelSelector.module.css
@@ -200,6 +200,7 @@
     justify-content: center;
     width: min-content;
     min-width: 11%;
+    padding: 0px;
   }
 
   .PanelSelectorTitleButtonLineBreak {
@@ -207,6 +208,7 @@
     width: 21%;
     align-items: flex-end;
     white-space: normal;
+    padding: 0px;
   }
 
   .PanelSelectorMainLineBreak {
