Posiciona imagem no flex-start

--- a/componentes/CardImg/CardImg.module.css
+++ b/componentes/CardImg/CardImg.module.css
@@ -71,7 +71,7 @@
 
 .CardInfoImagemContainer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center; 
   margin-bottom: 16px; 
 }
