--- a/componentes/ModalAlert/ModalAlertV4.module.css
+++ b/componentes/ModalAlert/ModalAlertV4.module.css
@@ -38,7 +38,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 26px;
+    font-size: 20px !important;
     line-height: 130%;
     color: #2EB380;
 }
@@ -46,7 +46,8 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 67px;
+    font-size: 36px !important;
+    width: 80%;
     line-height: 120%;
     color: #145C56;
 }
@@ -85,11 +86,17 @@
     line-height: 120%;
     color: #1F1F1F;
 }
+.ConteinerData{
+    display : flex;
+    flex-direction : column;
+    gap : 50px;
+    width : 65%;
+}
 .ContainerInfo2{
     display: grid;
     grid-template-columns: auto auto;
-    gap: 10px;
-    width: 65%;
+    gap: 12px;
+    width: 55%;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -104,6 +111,7 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    width: fit-content;
 }
 .CardsProfissionalConteiner{
     display : flex;
@@ -133,6 +141,11 @@
     content: "✖";
     cursor: pointer;
     padding:0.5em;
+}
+.ConteinerButton{
+    width : 100%;
+    display : flex;
+    justify-content : flex-end;
 }
 .botaoMobile{
     display: none;
@@ -172,10 +185,11 @@
         flex-direction: column;
     }
     .SubTitulo{
-        font-size: 12px;
+        font-size: 16px !important;
     }
     .Titulo{
-        font-size: 22px;
+        font-size: 22px !important;
+        width: 100%;
     }
     .ProfissionalInfo{
         font-size: 14px;
@@ -186,12 +200,22 @@
         font-size: 14px;
         margin-left: 45px;
     }
+    .ContainerInfo2{
+        width: 100%;
+    }
+    .ConteinerData{
+        width : 100%;
+    }
     .botaoDesktop{
         display: none;
     }
     .botaoMobile{
         display: block;
     }
+    .ConteinerButton{
+        justify-content : center;
+    }
+    
     .tituloNPS{
         width: 100% !important;
     }
