--- a/componentes/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
+++ b/componentes/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
@@ -44,9 +44,15 @@
   margin-bottom: 24px;
 }
 
+.TituloContainer {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
 .Titulo {
   display: flex;
-  margin-bottom: 16px;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -137,6 +143,7 @@
 .Recomendacao {
   display: flex;
   gap: 5px;
+  align-items: center;
   width: fit-content;
   position: absolute;
   z-index: 1000;
