--- a/componentes/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
+++ b/componentes/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
@@ -1,4 +1,4 @@
-* {
+.ResetEspacamento {
   margin: 0;
   padding: 0;
 }
@@ -53,7 +53,7 @@
 
 .Titulo {
   display: flex;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: -0.01em;
@@ -153,7 +153,7 @@
   width: fit-content;
   position: absolute;
   z-index: 1000;
-  top: 487px;
+  top: 485px;
   padding: 3px 10px;
   border-radius: 5px;
   border: 1px solid #916A20;
