Diminui titulo personalizacao secundaria

--- a/componentes/PainelBuscaAtiva/components/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
+++ b/componentes/PainelBuscaAtiva/components/PersonalizacaoImpressao/PersonalizacaoImpressao.module.css
@@ -230,6 +230,7 @@
   }
 
   .TituloPersonalizacoesSecundarias {
+    font-size: 18px;
     line-height: 18px;
     padding: 6px 0;
     margin-bottom: 16px;
